syntax = "proto3";

package video_rss.feed.v1;

option go_package = "github.com/arietids/video-rss-aggregator/gen/go/feed/v1;feedv1";

import "google/protobuf/timestamp.proto";

service FeedService {
  rpc CreateFeed(CreateFeedRequest) returns (CreateFeedResponse);
  rpc ListFeeds(ListFeedsRequest) returns (ListFeedsResponse);
  rpc GetFeed(GetFeedRequest) returns (GetFeedResponse);
  rpc DeleteFeed(DeleteFeedRequest) returns (DeleteFeedResponse);
}

message Feed {
  string id = 1;
  string url = 2;
  string title = 3;
  string description = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  google.protobuf.Timestamp last_fetched_at = 7;
  string status = 8; // ACTIVE, ERROR, PAUSED
}

message CreateFeedRequest {
  string url = 1;
}

message CreateFeedResponse {
  Feed feed = 1;
}

message ListFeedsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListFeedsResponse {
  repeated Feed feeds = 1;
  string next_page_token = 2;
}

message GetFeedRequest {
  string id = 1;
}

message GetFeedResponse {
  Feed feed = 1;
}

message DeleteFeedRequest {
  string id = 1;
}

message DeleteFeedResponse {
  bool success = 1;
}
